2014-12-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update reference to OpenOCD.

2014-11-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update for 2014.12 release.

2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Tidy up --help option and commenting.

2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Upgrade the script for building a kernel from the command
	line. This is not part of the official release, but can be
	convenient for developers.

	* build-kernel.sh: Add proper argument handling to allow control
	of the build.

2014-08-15  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Calculate MD5 sums for release tarballs.

2014-08-14  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-installer.sh: Copy Eclipse instead of
	moving.

2014-08-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-release.sh: Use stable branches for tags, instead of detached
	tags.

2014-08-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* site.exp: Ensure that HOSTCC and HOSTCFLAGS are set.

2014-07-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Do not use temporary dir for stage 1 toolchain.

2014-07-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Fix broken prebuilt tarballs.

2014-07-18  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Proper release name handling.

2014-07-17  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Adjust toolchain version string.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update to match current state.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: New file.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Rename all mentions of EM to arcem.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.
